syntax = "proto3";

package blog;

option go_package = "github.com/alessandro-p/go-grpc-mongo-sample/blog/proto";

import "google/protobuf/empty.proto";

message Post {
    string id = 1;
    string author = 2;
    string title = 3;
    string content = 4;    
}

message CreatePostRequest {
    string author = 1;
    string title = 2;
    string content = 3;
}

message PostId {
    string id = 1;
}

service PostService {
    rpc createPost (CreatePostRequest) returns (PostId);
    rpc GetPost (PostId) returns (Post);
    rpc UpdatePost (Post) returns (google.protobuf.Empty);
    rpc DeletePost (PostId) returns (google.protobuf.Empty);
    rpc ListPosts (google.protobuf.Empty) returns (stream Post);
}